<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stacker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game">Game</string>
    <string name="start">Start</string>
    <string name="tutorial">Tutorial</string>
    <string name="stacker_description">Stacker Picture</string>
    <string name="title_activity_score">Score</string>
    <string name="onekg">1kg</string>
    <string name="twokg">2kg</string>
    <string name="fivekg">5kg</string>
    <string name="tenkg">10kg</string>
    <string name="mainMenu">Main Menu -=- Team: My Turns -=-</string>
    <string name="game">Stacker Game -=- Team: My Turns -=-</string>
    <string name="score">Final Score -=- Team: My Turns -=-</string>
    <string name="playAgain">Play Again</string>
    <string name="finalScore">-Final Score-</string>
    <string name="pOne">Player 1:</string>
    <string name="pTwo">Player 2:</string>
    <string name="scoreboard">Player 1: 0 - Player 2: 0</string>
    <string name="title_activity_waiting">Waiting</string>
    <string name="user_name">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="create_account">New User</string>
    <string name="remember_me">Remember Me</string>
    <string name="waiting">Waiting For Other Player</string>
    <string name="title_activity_new_user">Create a New User</string>
    <string name="pass_var">Password Verify:</string>
    <string name="create">Create!</string>
    <string name="exitMenu">Exit the game</string>
    <string name="create_fail">Create User Fail</string>
    <string name="login_fail">Login Fail</string>
    <string name="contact_server">Contacting Server!</string>

</resources>
