<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity" >



    <TextView
        android:id="@+id/scoreBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/scoreboard" />
    <TextView
        android:id="@+id/playerTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/pOne" />
        
    <edu.msu.myturns.stackergame.StackView
        android:id="@+id/stackView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/NewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSelectWeight"
            android:tag="1"
            android:text="@string/onekg" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
			android:onClick="onSelectWeight"
			android:tag="2"
            android:text="@string/twokg" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
			android:onClick="onSelectWeight"
			android:tag="5"
            android:text="@string/fivekg" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSelectWeight"
			android:tag="10"
            android:text="@string/tenkg" />

    </LinearLayout>

</LinearLayout>
